# -lab4_warehouse_userver_mongodb

./: .env  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  Readme.md  Readme_6.md  data.js  data.sql  docker-compose.yml  event_catalog.md  event_driven_design.md  optimization.md  queries.js  queries.sql  schema.sql  schema_design.md  validation.js
configs/: config_vars.yaml  static_config.yaml
postgres/: data.sql  init.sql
schemas/: auth.yaml  common.yaml  errors.yaml  product.yaml  receipt.yaml  user.yaml
src/: main.cpp
src/controllers/add_product/: add_product.cpp  add_product.hpp
src/controllers/create_receipt/: create_receipt.cpp  create_receipt.hpp
src/controllers/create_user/: create_user.cpp  create_user.hpp
src/controllers/get_receipts/: get_receipts.cpp  get_receipts.hpp
src/controllers/get_stock/: get_stock.cpp  get_stock.hpp
src/controllers/get_user_by_login/: get_user_by_login.cpp  get_user_by_login.hpp
src/controllers/get_writeoffs/: get_writeoffs.cpp  get_writeoffs.hpp
src/controllers/login/: login.cpp  login.hpp
src/controllers/search_products/: search_products.cpp  search_products.hpp
src/controllers/search_users/: search_users.cpp  search_users.hpp
src/controllers/write_off/: write_off.cpp  write_off.hpp
src/domain/: exceptions.hpp  product.hpp  receipt.hpp  user.hpp
src/infrastructure/jwt/: jwt_auth_factory.cpp  jwt_auth_factory.hpp  jwt_checker.cpp  jwt_checker.hpp  jwt_component.cpp  jwt_component.hpp  jwt_generator.cpp  jwt_generator.hpp
src/infrastructure/postgres_storage/: postgres_storage.cpp  postgres_storage.hpp
src/lib/json_builders/: json_builders.cpp  json_builders.hpp
src/lib/password_hasher/: password_hasher.cpp  password_hasher.hpp
src/services/product_service/: product_service.cpp  product_service.hpp
src/services/receipt_service/: receipt_service.cpp  receipt_service.hpp
src/services/user_service/: user_service.cpp  user_service.hpp
tests/: conftest.py  requirements.txt  test_basic.py
